@@ -1,4 +1,4 @@
-                                                                      May 2000
+                                                                      Feb 2003
 
     Hi,
 
@@ -50,5 +50,5 @@ Several special command line parameters were introduced in this Falcon port:
 
 For bugreports of Falcon port please write to me (Petr Stehlik)
 
-e-mail    joy@sophics.cz
-WWW       http://joy.atari.org/
+e-mail    pstehlik@sophics.cz
+WWW       http://atari800.sourceforge.net/
